worked on languages

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1574,7 +1574,13 @@
 		"Remove_the_Bill":"Remove the Bill ?",
 		"Are_you_sure_to_remove_this_Bill":"Are you sure to remove this Bill ?",
 		"Remove_Bill":"Remove Bill ?",
-		"Are_you_really_want_to_remove_this_Bill":"Are you really want to remove this Bill ?"
+		"Are_you_really_want_to_remove_this_Bill":"Are you really want to remove this Bill ?",
+		"Discharge_Patient_in_This_Step":"Discharge Patient in This Step",
+		"Patient_in_this_Step_will_be_discharged_from_the_flow":"Patient in this Step will be discharged from the flow.",
+		"What_would_you_like_to_do":" What would you like to do ?",
+		"CreateInvoices":"Create Invoices",
+		"Discharge_without_Invoices":"Discharge without Invoices",
+		"Cancel" :"Cancel"
 	
 		
 	
