changes of label changes and some design issue

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1533,7 +1533,7 @@
 		"AddPatientStep" : "Add patient to this step",
 		"MoveAll" : "Move All patient in this Step",
 		"Add_other" :"Add ''other'' text field",
-		"VHS_view" : "VH view",
+		"VHS_view" : "Hospital view",
 		"Normal_view" : "Normal view",
 		"qty": "Qty",
 		"Price": "Price",
