Worked on Institutes any muProfile files

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1291,6 +1291,7 @@
 		"Dueon": "Due on",
 		"Duplicate": "Duplicate",
 		"Archive": "Archive",
+		"Prof_img":"Profile Image",
 		"Markasdone": "Mark as done",
 		"Attachments": "Attachments",
 		"Roomname": "Room name",
