worked on languages

--- a/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
+++ b/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
@@ -348,7 +348,7 @@
 		"more" :"more",
 		"DarkMode": "Dark Mode",
 		"AssignHouse": "Assign Hospital",
-		"InstituteGroups": "Institute Groups",
+		"Hospital": "Hospital",
 		"EditGroup": "Edit Group",
 		"AddInstituteGroup": "+ Add Institute Group",
 		"AddInstitution": "Add Institution",
