Left menu changes for nurse and doctor

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1534,7 +1534,8 @@
 		"MoveAll" : "Move All patient in this Step",
 		"Add_other" :"Add ''other'' text field",
 		"VHS_view" : "Hospital view",
-		"Normal_view" : "Normal view",
+		"Nurse_view" : "Nurse view",
+		"Doctor_view" : "Doctor view",
 		"qty": "Qty",
 		"Price": "Price",
 		"quantity": "quantity",
