--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1257,6 +1257,7 @@
 		"needUnblock": "Sua conta ainda não está desbloqueada, forneça sua identificação profissional ou, se você a enviou recentemente, dê-nos até 24 horas para desbloqueá-la.",
 		"fillreptcha": "Por favor, preencha o reCAPTCHA",
 		"Tachykardia":"Taquicardia",
-		"select_user_type":"Selecione o tipo de usuário"
+		"select_user_type":"Selecione o tipo de usuário",
+		"suported_file_type_jpg": "Tipos de arquivos permitidos: .jpg, .png"
 	}
 }
