--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1257,6 +1257,7 @@
     "needUnblock": " Ваша учетная запись еще не разблокирована, укажите свой профессиональный идентификатор или, если вы отправляли его недавно, дайте нам до 24 часов, чтобы разблокировать его",
     "fillreptcha": "Пожалуйста, заполните RECAPTCHA",
     "Tachykardia":"Тахикардия",
-    "select_user_type": "Пожалуйста, выберите тип пользователя"
+    "select_user_type": "Пожалуйста, выберите тип пользователя",
+    "suported_file_type_jpg": "Поддерживаемые типы файлов: .JPG, .PNG"
   }
 }
