--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1256,6 +1256,7 @@
 		"needUnblock": "لم يتم إلغاء قفل حسابك بعد ، يرجى تقديم معرّفك المهني أو إذا كنت قد أرسلته مؤخرًا ، فيرجى منحنا ما يصل إلى 24 ساعة لإلغاء قفله.",
 		"fillreptcha":"الرجاء ملء reCAPTCHA",
 		"Tachykardia":"عدم انتظام دقات القلب",
-		"select_user_type":"الرجاء تحديد نوع المستخدم"
+		"select_user_type":"الرجاء تحديد نوع المستخدم",
+		"suported_file_type_jpg": "أنواع الملفات المدعومة: .jpg و .png و"
 	}
 }
