--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1255,6 +1255,10 @@
 		"needUnblock": "Your account is not unlocked yet, please provide your professional ID or if you have submitted it recently, please give us up to 24 hours to unlock it.",
 		"fillreptcha": "Please fill the reCAPTCHA",
 		"Tachykardia": "Tachycardia",
+		"select_user_type": "Please select user type",
+		"suported_file_type_jpg": "Supported file types: .jpg, .png",
+		
+		
 		"Billing": "Billing",
 		"Institution": "Institution",
 		"Addservice": "Add service",
@@ -1547,7 +1551,6 @@
 		"Task": "Task",
 		"ServiceName": "Service Name",
 		"General": "General",
-		"select_user_type": "Please select user type",
 		"ProfessionalTask": "Professional Tasks",
 		"Entertitle" :"Enter title",
 		"FilterbyStaff":"Filter by Staff",
@@ -1583,7 +1586,7 @@
 		"Discharge_without_Invoices":"Discharge without Invoices",
 		"Cancel" :"Cancel",
 		"selectpatient":" Select Patient",
-		"Search_by_Hospital_name_or_ID":"Search by Hospital name or ID"	 
+		"Search_by_Hospital_name_or_ID":"Search by Hospital name or ID"
 		
 	}
 }
