--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1255,6 +1255,7 @@
 		"fillreptcha":"Tafadhali jaza reCAPTCHA",
 		"Tachykardia":"Tachycardia",
 		"Currentpaincondition":"Hali ya maumivu ya sasa",
-		"select_user_type":"Tafadhali chagua aina ya mtumiaji"
+		"select_user_type":"Tafadhali chagua aina ya mtumiaji",
+		"suported_file_type_jpg": "Mkono faili aina: .jpg, .png"
 	}
 }
