--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -1255,6 +1255,8 @@
 		"verifyAccount": "Hesabınız doğrulanmadı, lütfen e-posta hesabınızı kontrol edin.",
 		"needUnblock": "Hesabınızın kilidi henüz açılmadı, lütfen profesyonel kimliğinizi sağlayın veya hesabı yakın zamanda gönderdiyseniz, kilidini açmamız için lütfen bize 24 saat verin.",
 		"fillreptcha": "Lütfen RECAPTCHA'yı doldurun",
-		"Tachykardia": "taşikardi"
+		"Tachykardia": "taşikardi",
+		"select_user_type":"Lütfen kullanıcı türünü seçin",
+		"suported_file_type_jpg": "Desteklenen dosya tipleri: .jpg, .png"
 	}
 }
