worked on jira tickets

--- a/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
+++ b/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
@@ -365,7 +365,12 @@
 		"InstitutionDescriptionNote": "Institution Description Note",
 		"HospitalDescriptionNote": "Hospital Description Note",
 		"hosp_name": "Hospital Name",
-		"hosp_id": "Hospital ID"
+		"hosp_id": "Hospital ID",
+		"Enterinstitutegroupname":"Enter institute group name",
+		"Enterinstitutiondescriptionnote":"Enter institution description note",
+		"Enterhospitalname":"Enter hospital name",
+		"Enterhospitaldescriptionnote":"Enter hospital description note",
+		"Change_Hospital":"Change Hospital"
 	}
 }
 
