--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1587,25 +1587,7 @@
 		"Cancel" :"Cancel",
 		"selectpatient":" Select Patient",
 		"Search_by_Hospital_name_or_ID":"Search by Hospital name or ID",
-		"Enterprice":"Enter price",
-		"FilterbyPatient":"Filter by Patient",
-		"Enterinstitutegroupname":"Enter institute group name",
-		"Enterinstitutiondescriptionnote":"Enter institution description note",
-		"Enterhospitalname":"Enter hospital name",
-		"Enterhospitaldescriptionnote":"Enter hospital description note",
-		"Findaadminstaff":"Find a admin staff"
-	
-		
-	
-	
-		
-		
-		
-		
-	
-		
-	
-		 
-		
+		"Enterprice":"Enter price"
+			
 	}
 }
