--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1597,6 +1597,9 @@
 		"Country_Code":"Country Code",
 		"EditComment":"Edit Comment",
 		"EnterComment":"Enter Comment",
-		"InstituteGroups": "Hospital Groups"	
+		"InstituteGroups": "Hospital Groups",
+		"Wards"	:"Wards"
+		
+	
 	}
 }
