--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1258,6 +1258,7 @@
 		"Tachykardia":"Tachycardie",
 		"plz_fill_mob_number": "Veuillez remplir le numéro de portable",
 		"select_user_type": "Veuillez sélectionner le type d'utilisateur",
-		"suported_file_type_jpg": "Types de fichiers pris en charge .jpg, .png"
+		"suported_file_type_jpg": "Types de fichiers pris en charge .jpg, .png",
+		"plz_select_patient":"S'il vous plaît, sélectionnez un patinet"
 	}
 }
