--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1598,7 +1598,15 @@
 		"EditComment":"Edit Comment",
 		"EnterComment":"Enter Comment",
 		"InstituteGroups": "Hospital Groups",
-		"Wards"	:"Wards"
+		"Wards"	:"Wards",
+		"Whowouldyouliketosendthisto":"Who would you like to send this to ?",
+		"Text":"Text",
+		"Addbuttonattheendofpost":"Add button at the end of post",
+		"Setbuttontext":"Set button text",
+		"Dueon_time":"Due on (time)",
+		"ALL":"ALL",
+		"Done":"Done"
+		
 		
 	
 	}
