worked on language in virtualHospitalComponent

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1634,7 +1634,9 @@
 		"Plz_add_atleast_one_ward":"Please add atleast one ward",
 		"Plz_enter_ward_name":"Please enter ward name",
 		"Plz_enter_alteast_one_room":"Please enter alteast one room",
-		"Plz_enter_valid_room_name_or_number_of_beds":"Please enter valid room name or number of beds"
+		"Plz_enter_valid_room_name_or_number_of_beds":"Please enter valid room name or number of beds",
+		"Task_title_cant_be_empty":"Task title can't be empty",
+		"Plz_select_a_Patient":"Please select a Patient"
 
 			
 	}
