--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1258,6 +1258,385 @@
 		"Tachykardia":"عدم انتظام دقات القلب",
 		"select_user_type":"الرجاء تحديد نوع المستخدم",
 		"suported_file_type_jpg": "أنواع الملفات المدعومة: .jpg و .png و",
-		"plz_select_patient":"من فضلك ، حدد باتينيت"
+		"plz_select_patient":"من فضلك ، حدد باتينيت",
+
+		"Billing": "Billing",
+		"Institution": "Institution",
+		"Addservice": "Add service",
+		"Customservicetitle": "Custom service title",
+		"Customservicedescription": "Custom service description",
+		"SpaceManagement": "Space Management",
+		"PatientFlow": "Patient Flow",
+		"AddPatienttoFlow": "Add Patient to Flow",
+		"PatientID": "Patient ID",
+		"PatientPIN": "Patient PIN",
+		"CaseNumber": "Case Number",
+		"AddQuestionnaire": "Create a Questionnaire",
+		"EditQuestionnaire": "Edit Questionnaire",
+		"Addnewservice": "Add new service",
+		"Specialities": "Specialities",
+		"DeleteSpeciality": "Delete Speciality",
+		"Iunderstandthat:": "I understand that:",
+		"AddSpeciality": "Add Speciality",
+		"addNewSpeciality": "+ Add a new Speciality",
+		"Appointments": "Appointments",
+		"Tasks_overview": "Tasks Overview",
+		"Open": "Open",
+		"Donetoday": "Done today",
+		"CreateaTask": "Create a Task",
+		"ForPatient": "For Patient",
+		"House_assigned_to_user": "House is assigned to User",
+		"House_alread_exist_to_user": "House is already exist to User",
+		"Select_atleast_one_house": "Select atleast one house",
+		"AssignedHouses": "Assigned Houses -",
+		"Taskdescription": "Task description",
+		"Assignedto": "Assigned to",
+		"Speciallity": "Speciallity",
+		"Dueon": "Due on",
+		"Duplicate": "Duplicate",
+		"Archive": "Archive",
+		"Chan_Prof_img": "Change Profile Image",
+		"Markasdone": "Mark as done",
+		"Attachments": "Attachments",
+		"Roomname": "Room name",
+		"Bedsinroom": "Beds in room",
+		"AssignHouse": "Assign Hospital",
+		"AddTask": "Add Task",
+		"AddSpecialty": "Add Speciality",
+		"ChangeStaff": "Change Staff",
+		"AssignWardRoom": "Assign Ward / Room",
+		"MovePatient": "Move Patient",
+		"Specialitycolor": "Speciality color",
+		"InvoiceID": "Invoice ID",
+		"CaseID": "Case ID",
+		"Status": "Status",
+		"BacktoPatientFlow": "Back to PatientFlow",
+		"NewEntry": "Entry",
+		"NewTask": "Task",
+		"Editinfo": "Edit info",
+		"More": "More",
+		"MedicalStaff": "Medical Staff",
+		"CompletedTasks": "Completed Tasks",
+		"DocumentsFiles": "Documents / Files",
+		"Issued": "Issued",
+		"Weight": "Weight",
+		"Height": "Height",
+		"BloodPressure": "BloodPressure",
+		"Lastdoctorvisits": "Last doctor visits",
+		"Upcomingappointment": "Upcoming appointment",
+		"LastDocuments": "Last Documents",
+		"Prescription": "Prescription",
+		"Invoice_ID": "Invoice ID",
+		"Add_service": "Add service",
+		"Created_user_id_pin": "Created User ID and PIN",
+		"Hospitals": "Hospitals",
+		"InvoiceAmount": "Invoice amount",
+		"Editservice": "Edit service",
+		"save_and_close": "Save & Close",
+		"Ward": "Ward",
+		"move_all_patients": "Move All Patients to",
+		"move_step": "Move Step",
+		"Staff": "Staff",
+		"Room": "Room",
+		"Bed": "Bed",
+		"id_and_pin_not_correct": "ID or PIN is not correct",
+		"step_name": "Step Name",
+		"add_patient_to_flow": "Add Patient to Flow",
+		"add_step": "Add Step",
+		"Add": "Add",
+		"AddPatient": "+ Add patient",
+		"AddStep": "+ Add step",
+		"clear_all_filters": "Clear all filters",
+		"applyFilters": "Apply filters",
+		"case_already_exists_in_hospital": "Case Already exists in hospital",
+		"case_already_exists_in_other_hospital": "Case Already exists in other hospital -",
+		"ofInstitution": "of Insititution - ",
+		"Comments": "Comments",
+		"deleteStep": "Delete Step",
+		"removeStep": "Remove Step?",
+		"yes_deleteStep": "Yes, Delete Step",
+		"all_patient_removed_cannot_be_reversed": "All Patients in this Step will be removed from the flow. This action can not be reversed.",
+		"are_you_sure": "Are you sure you want to do this?",
+		"really_want_to_remove": "Are you really want to remove this Step?",
+		"cancel_keepStep": "Cancel, Keep Step",
+		"removeQuestion": "Remove Question ?",
+		"are_you_sure_removeQuestion": "Are you sure to remove this Question?",
+		"NewQuestion": "+ New Question",
+		"QuestionnaireDescription": "Questionnaire description",
+		"EditQuestion": "Edit Question",
+		"DeleteQuestion": "Delete Question",
+		"removeService": "Remove Service ?",
+		"sure_removeService": "Are you sure to remove this Service?",
+		"really_want_to_remove_service": "Are you really want to remove this Service?",
+		"newService": "+ New Service",
+		"editService": "Edit Service",
+		"deleteService": "Delete Service",
+		"Move_patient_here": "Move patient here ",
+		"deleteSpeciality": "Delete Speciality?",
+		"really_want_to_delete_speciality": "Are you really want to delete this Speciality?",
+		"BacktoChangeHospital": "Back to Change Hospital",
+		"select_all_conditions_to_delete_speciality": "Please select the all condition for delete the speciality",
+		"PleaseConfirmThatYouUnderstandTheConsequencesOfYourAction": "Please confirm that you understand the consequences of your action.",
+		"yesDeleteSpeciality": "Yes, Delete Speciality",
+		"cancelKeepSpeciality": "Cancel, Keep Speciality",
+		"AddWard": "+ Add a Ward",
+		"UpdateWard": "Update Ward",
+		"SaveWard": "Save Ward",
+		"Save": "Save",
+		"Rename": "Rename",
+		"Statistics": "Statistics",
+		"TotalPatients": "Total Patients",
+		"Doctors": "Doctors",
+		"Nurses": "Nurses",
+		"All": "All",
+		"AddStaff": "Add staff",
+		"ShowArchivedTasks": "Show archived tasks",
+		"CreateNewPatient": "+ Create New Patient",
+		"AddNewPatient": "+ Add a new patient",
+		"Choice": "Choice",
+		"AddRoom": "+ Add a Room",
+		"RemovePatientfromFlow": "Remove Patient from Flow",
+		"patient_will_be_removed_and_cannot_be_reversed": "This patient will be removed from the flow. This action can not be reversed.",
+		"Yes_remove_patient": "Yes, Remove Patient",
+		"Cancel_keep_patient": "Cancel, Keep Patient",
+		"discharge_all_patients_here": "Discharge All Patients in This Step",
+		"AllPatientsWillBeDischargedFromFlow": "All Patients in this Step will be discharged from the flow.",
+		"What_would_you_do": "What would you like to do?",
+		"createInvoices": "Create Invoices",
+		"dischargeWithoutInvoice": "Discharge without Invoices",
+		"OpenDetails": "Open details",
+		"change_staff": "Change Staff",
+		"move_patient_to": "Move patient to",
+		"assign_to_speciality": "Assign to Speciality",
+		"assign_to_room": "Assign to room",
+		"DischargePatient": "Discharge Patient",
+		"Please_assign_speciality_first": "Please assign a speciality first",
+		"sevenFebat1238": "7 Feb at 12:38",
+		"ShotDescriptionOfThisService": "This can be a short description of this service.",
+		"DuplicateInvoice": "Duplicate Invoice",
+		"PrintInvoice": "Print Invoice",
+		"DownloadPDF": "Download PDF",
+		"Setstatus": "Set status",
+		"DeleteInvoice": "Delete Invoice",
+		"slashmin": "/min",
+		"bslashmin": "b/min",
+		"mmHg": "mmHg",
+		"mgdl": "mg/dl",
+		"addNewEntry": "+ Add new entry",
+		"documentName": "Document name",
+		"dateAdded": "Date added",
+		"PersonalInformation": "Personal Information",
+		"GotoRoomManagement": "Go to Room Management",
+		"RoomsBeds": "Rooms & Beds",
+		"rooms": "rooms",
+		"beds": "beds",
+		"StaffActions": "Staff actions",
+		"thirty4": "34",
+		"Diagnoses_made": "Diagnoses made",
+		"Medication_administered": "Medication administered",
+		"Prescriptions_issued": "Prescriptions issued",
+		"remove_comment": "Remove the Comment ?",
+		"RemoveComment": "Remove Comment ?",
+		"remove_task": "Remove the Task ?",
+		"RemoveTask": "Remove Task?",
+		"you_sure_to_remove_comment": "Are you sure to remove this Comment?",
+		"you_sure_to_remove_task": "Are you sure to remove this Task?",
+		"really_want_to_remove_comment": "Are you really want to remove this Comment?",
+		"really_want_to_remove_task": "Are you really want to remove this Task?",
+		"add_task": "+ Add Task",
+		"AddAppointment": "+ Add Appointment",
+		"Addtime": "Add time",
+		"remove_time": "Remove time",
+		"AddComment": "Add Comment",
+		"save_task_and_close": "Save Task & Close",
+		"EditTask": "Edit Task",
+		"DeleteTask": "Delete Task",
+		"Tasks": "Tasks",
+		"Promotion": "Promotion",
+		"AliesID": "Alies ID -",
+		"Pin": "Pin -",
+		"Taskstatus": "Task status:",
+		"Iamhere": "I am here :",
+		"AimedisInvoiceReport": "Aimedis Invoice Report",
+		"ServiceList": "Service List",
+		"InvoiceData": "Invoice Data",
+		"Services:": "Services :",
+		"TotalAmount": "Total Amount",
+		"Created_at": "Created at",
+		"YourAimedisTeam": "Your Aimedis Team",
+		"contactAimedisForQuery": "If you have any questions do not hesitate to contact us via the support chat or via contact@aimedis.com",
+		"NewInvoice": "+ New Invoice",
+		"Paid": "Paid",
+		"Draft": "Draft",
+		"Overdue": "Overdue",
+		"RemoveService": "Remove the Service ?",
+		"sure_remove_service_from_invoice": "Are you sure to remove this Service from Invoice?",
+		"BacktoBilling": "Back to Billing",
+		"FinishInvoice": "Finish Invoice",
+		"SaveDraft": "Save Draft",
+		"Entries": "Entries",
+		"PatientInInvoice": "Patient In invoice",
+		"Question": "Question",
+		"PromotionTitle": "Promotion Title",
+		"PromotionType": "Promotion Type",
+		"DeleteGroup": "Delete Group",
+		"hospitals_in_this_step_will_be_removed_action_cannot_reversed": "All hospitals in this Step will be removed from the group. This action can not be reversed.",
+		"RemoveGroup": "Remove Group?",
+		"r_u_really_want_to_remove_group": "Are you really want to remove this Group?",
+		"DeleteHospital": "Delete Hospital",
+		"hospitals_will_be_removed_action_cannot_reversed": "This hospital will be removed. This action can not be reversed.",
+		"YesDelete": "Yes, Delete",
+		"RemoveHospital": "Remove hospital?",
+		"r_u_really_want_to_remove": "Are you really want to remove this?",
+		"AssignHospitals": "Assign Hospitals",
+		"DocumentMovedToArchive": "Document is moved to Archive",
+		"DocumentMovedToDocuments": "Document is moved to Documents",
+		"OpenCreateUserModelHospitalAdmin": "Open Create User Model (Hospital Admin)",
+		"create_new_user": "Create new user",
+		"Currentpassword": "Current password",
+		"Confirm_your_password": "Confirm your password",
+		"First_name": "First name",
+		"Last_name": "Last name",
+		"Hospital": "Hospital",
+		"ShoworHide": "Show or Hide",
+		"Create": "Create",
+		"Patientjourney": "Patient journey",
+		"Questionnaire": "Questionnaire",
+		"Questionnaire_of": "Questionnaire of -",
+		"FinalSubmit": "Final Submit",
+		"Apply": "Apply",
+		"Applied": "Applied",
+		"ViewDemo": "View Demo",
+		"Patientflow": "Patient flow",
+		"ChangeHospital": "Change Hospital",
+		"Invoices": "Invoices",
+		"InvoicePattern": "Invoice Pattern",
+		"MyTasks": "My Tasks",
+		"AllTasks": "All Tasks",
+		"Tasksoverview": "Tasks overview",
+		"ChildrensWard": "Childrens Ward",
+		"All_Wards_deleted": "All Wards will be deleted",
+		"All_Rooms_Beds_deleted": "All Rooms & Beds will be deleted",
+		"All_Patients_removed_beds": "All Patients will be removed from their beds",
+		"Color": "Color",
+		"Choose_questionnaire_type": "Choose questionnaire type",
+		"Make_it_multiple_questionnaire": "Make it a multiple questionnaire",
+		"Add_a_Choice": "Add a Choice",
+		"Questionnairetitle": "Questionnaire title",
+		"Enterdescription": "Enter description",
+		"Overview": "Overview",
+		"Quantity": "Quantity",
+		"Priceperquantity": "Price per quantity",
+		"Servicename": "Service name",
+		"Discharge_All_Patients_in_This_Step": "Discharge All Patients in This Step",
+		"Tasktitle": "Task title",
+		"Hide_task_from_patient": "Hide task from patient",
+		"Archived": "Archived",
+		"InstitutionName": "Institution Name",
+		"InstitutionDescriptionNote": "Institution Description Note",
+		"HospitalDescriptionNote": "Hospital Description Note",
+		"AddPatientStep" : "Add patient to this step",
+		"MoveAll" : "Move All patient in this Step",
+		"Add_other" :"Add ''other'' text field",
+		"VHS_view" : "Hospital view",
+		"Nurse_view" : "Nurse view",
+		"Doctor_view" : "Doctor view",
+		"qty": "Qty",
+		"Price": "Price",
+		"quantity": "quantity",
+		"avlbl": "available",
+		"Hidden": "Hidden",
+		"sortBy": "Sort by:",
+		"kg": "kg",
+		"cm": "cm",
+		"Task": "Task",
+		"ServiceName": "Service Name",
+		"General": "General",
+		"ProfessionalTask": "Professional Tasks",
+		"Entertitle" :"Enter title",
+		"FilterbyStaff":"Filter by Staff",
+		"FilterbySpeciality":"Filter by Speciality",
+		"FilterbyRoom":"Filter by Room",
+		"EnterWard":"Enter Ward",
+		"EnterServicename":"Enter Service name",
+		"Serviceshortdescription":"Service short description",
+		"Enterserviceshortdescription":"Enter service short description",
+        "Enterserviceprice":"Enter service price",
+		"Enteraquestion":"Enter a question",
+		"EnterSpecialityname":"Enter Speciality name",
+		"Enterchoice":"Enter choice",
+		"Enterquestion":"Enter question",
+		"Search_Select":"Search & Select",
+		"AllSpecialities":"All Specialities",
+		"SelectStepName":"Select Step Name",
+		"Name":"Name",
+		"Searchserviceoraddcustominput":"Search service or add custom input",
+		"Enterquantity":"Enter quantity",
+		"EnterTitlename":"Enter Title name",
+		"Filterbypatient":"Filter by patient",
+		"FilterbyWard":"Filter by Ward",
+		"FilterbyStatus":"Filter by Status",
+		"Remove_the_Bill":"Remove the Bill ?",
+		"Are_you_sure_to_remove_this_Bill":"Are you sure to remove this Bill ?",
+		"Remove_Bill":"Remove Bill ?",
+		"Are_you_really_want_to_remove_this_Bill":"Are you really want to remove this Bill ?",
+		"Discharge_Patient_in_This_Step":"Discharge Patient in This Step",
+		"Patient_in_this_Step_will_be_discharged_from_the_flow":"Patient in this Step will be discharged from the flow.",
+		"What_would_you_like_to_do":" What would you like to do ?",
+		"CreateInvoices":"Create Invoices",
+		"Discharge_without_Invoices":"Discharge without Invoices",
+		"Cancel" :"Cancel",
+		"selectpatient":" Select Patient",
+		"Search_by_Hospital_name_or_ID":"Search by Hospital name or ID",
+		"Enterprice":"Enter price",
+		"FilterbyPatient":"Filter by Patient",
+		"Enterinstitutegroupname":"Enter institute group name",
+		"Enterinstitutiondescriptionnote":"Enter institution description note",
+		"Enterhospitalname":"Enter hospital name",
+		"Enterhospitaldescriptionnote":"Enter hospital description note",
+		"Findaadminstaff":"Find a admin staff",
+		"Country_Code":"Country Code",
+		"EditComment":"Edit Comment",
+		"EnterComment":"Enter Comment",
+		"InstituteGroups": "Hospital Groups",
+		"Wards"	:"Wards",
+		"Whowouldyouliketosendthisto":"Who would you like to send this to ?",
+		"Text":"Text",
+		"Addbuttonattheendofpost":"Add button at the end of post",
+		"Setbuttontext":"Set button text",
+		"Dueon_time":"Due on (time)",
+		"ALL":"ALL",
+		"Done":"Done",
+		"Newappointment":"New appointment",
+		"Findpatient":"Find patient",
+		"Appointmentreason":"Appointment reason",
+		"Specialty":"Specialty",
+		"EnterpatientnameorID":"Enter patient name or ID",
+		"Selectspecialty":"Select specialty",
+		"Searchforcity":"Search for city",
+		"Plz_fill_the_recaptcha":"Please fill the RECAPTCHA",
+		"Ser_already_exists":"Service is already exists, please manage with update that one",
+		"Please_enter_valid_price":"Please enter valid price",
+		"Custom_service_title_cant_be_empty":"Custom service title can't be empty",
+		"Invoice_Id_cant_be_empty":"Invoice Id can't be empty",
+		"Please_select_patient":"Please select patient",
+		"Please_select_status":"Please select status",
+		"Please_add_atleast_one_service":"Please add atleast one service",
+		"Invoice_Id_is_already_exists":"Invoice Id is already exists",
+		"Plz_select_question_type":"Please select question type",
+		"Title_cant_be_empty":"Title can't be empty",
+		"Ques_cant_be_empty":"Question can't be empty",
+		"Plz_enter_Service_Name":"Please enter Service Name",
+		"Plz_enter_a_valid_price":"Please enter a valid price",
+		"Something_went_wrong":"Somthing went wrong, Please try again",
+		"Plz_enter_Speciality_name":"Please enter Speciality name",
+		"Plz_select_color":"Please select color",
+		"Plz_add_atleast_one_ward":"Please add atleast one ward",
+		"Plz_enter_ward_name":"Please enter ward name",
+		"Plz_enter_alteast_one_room":"Please enter alteast one room",
+		"Plz_enter_valid_room_name_or_number_of_beds":"Please enter valid room name or number of beds",
+		"Task_title_cant_be_empty":"Task title can't be empty",
+		"Plz_select_a_Patient":"Please select a Patient",
+		"renameStep":"Rename step name"
 	}
 }
