Worked on h_Documents and translations

--- a/src/Screens/hospital_Admin/translations/en_json.json
+++ b/src/Screens/hospital_Admin/translations/en_json.json
@@ -114,6 +114,20 @@
 		"Delete": "Delete",
 		"de_archive": "De-archive",
 		"password": "Password",
+		"DeleteGroup": "Delete Group",
+		"yes_deleteStep": "Yes, Delete Step",
+		"cancel_keepStep": "Cancel, Keep Step",
+		"are_you_sure": "Are you sure you want to do this?",
+		"hospitals_in_this_step_will_be_removed_action_cannot_reversed": "All hospitals in this Step will be removed from the group. This action can not be reversed.",
+		"RemoveGroup": "Remove Group?",
+		"r_u_really_want_to_remove_group": "Are you really want to remove this Group?",
+		"hospitals_will_be_removed_action_cannot_reversed": "This hospital will be removed. This action can not be reversed.",
+		"YesDelete": "Yes, Delete",
+		"This_document_is_not_permanently_deleted_this_is_only_go_in_archive":"This document is not permanently deleted this is only go in archive",
+		"Delete_Document":"Delete Document",
+		"RemoveHospital": "Remove hospital?",
+		"r_u_really_want_to_remove": "Are you really want to remove this?",
+		"DeleteHospital": "Delete Hospitals",
 		"supportive_text": "Supportive text like this can be added if needed.",
 		"Current": "Current",
 		"new_password": "New password",
