--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1639,7 +1639,7 @@
 		"Task_title_cant_be_empty":"Task title can't be empty",
 		"Plz_select_a_Patient":"Please select a Patient",
 		"renameStep":"Rename step name",
-		"Enter_room_name":"Enter room name"
+		"Citizenship": "Citizenship"
 
 			
 	}
