--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1301,7 +1301,7 @@
 		"Attachments": "Attachments",
 		"Roomname": "Room name",
 		"Bedsinroom": "Beds in room",
-		"AssignHouse": "Assign Hospital",
+		"ManageHouse": "Manage Hospital",
 		"AddTask": "Add Task",
 		"AddSpecialty": "Add Speciality",
 		"ChangeStaff": "Change Staff",
