--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1301,7 +1301,7 @@
 		"Attachments": "Attachments",
 		"Roomname": "Room name",
 		"Bedsinroom": "Beds in room",
-		"AssignHouse": "Assign Hospital",
+		"AssignHouse": "Manage Hospital",
 		"AddTask": "Add Task",
 		"AddSpecialty": "Add Speciality",
 		"ChangeStaff": "Change Staff",
@@ -1348,7 +1348,7 @@
 		"AddPatient": "+ Add patient",
 		"AddStep": "+ Add step",
 		"clear_all_filters": "Clear all filters",
-		"applyFilters": "Apply filters",
+		"applyFilters": "Apply",
 		"case_already_exists_in_hospital": "Case Already exists in hospital",
 		"case_already_exists_in_other_hospital": "Case Already exists in other hospital -",
 		"ofInstitution": "of Insititution - ",
@@ -1396,7 +1396,7 @@
 		"AddNewPatient": "+ Add a new patient",
 		"Choice": "Choice",
 		"AddRoom": "+ Add a Room",
-		"RemovePatientfromFlow": "Remove Patient from Flow",
+		"RemovePatientfromFlow": "Remove Patient",
 		"patient_will_be_removed_and_cannot_be_reversed": "This patient will be removed from the flow. This action can not be reversed.",
 		"Yes_remove_patient": "Yes, Remove Patient",
 		"Cancel_keep_patient": "Cancel, Keep Patient",
