Worked on CasesMoreButton and AppointTask

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1303,6 +1303,7 @@
 		"Bedsinroom": "Beds in room",
 		"ManageHouse": "Manage Hospital",
 		"AddTask": "Add Task",
+		"Add_Appointment":"Add Appointment",
 		"AddSpecialty": "Add Speciality",
 		"ChangeStaff": "Change Staff",
 		"AssignWardRoom": "Assign Ward / Room",
